fdo#77727 PAGEBREAK In first paragraph was not rendered and exported.

Case 1: If PAGEBREAK appears in first paragraph, LO was inserting
       BreakType_PAGE_BEFORE but since it was first paragraph, PAGEBREAK
       was not rendered in LO hence not exported back to docx file properly.
  case 2: If PAGEBREAK appears after first run of any paragraph in document
       LO was rendering it in wrong paragraph.
  case 3: If COLUMNBREAK appears in first paragraph of section, LO was not
       rendering and exporting it.

Change-Id: Ic557b3e6f80cfa6dd3eb6b4204be7e6531b9ecbf
Reviewed-on: https://gerrit.libreoffice.org/9191
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>