writerfilter/source/dmapper/DomainMapper.cxx
@@ -2795,10 +2795,22 @@ void DomainMapper::lcl_utext(const sal_uInt8 * data_, size_t len)
             if ( pContext && !pContext->GetFootnote().is() )
             {
                 if (m_pImpl->isBreakDeferred(PAGE_BREAK))
+                {
+                    /* If PAGEBREAK appears in first paragraph of the section or
+                     * after first run of any paragraph then need to split paragraph
+                     * to handle it properly.
+                     */
+                    if (m_pImpl->GetIsFirstParagraphInSection() || !m_pImpl->IsFirstRun())
+                    {
+                        m_pImpl->m_bIsSplitPara = true;
+                        m_pImpl->finishParagraph(m_pImpl->GetTopContextOfType(CONTEXT_PARAGRAPH));
+                        lcl_startParagraphGroup();
+                    }
                     m_pImpl->GetTopContext()->Insert( PROP_BREAK_TYPE, uno::makeAny( com::sun::star::style::BreakType_PAGE_BEFORE) );
+                }
                 else if (m_pImpl->isBreakDeferred(COLUMN_BREAK))
                 {
-                    if (!m_pImpl->IsFirstRun())
+                    if (m_pImpl->GetIsFirstParagraphInSection() || !m_pImpl->IsFirstRun())
                     {
                         mbIsSplitPara = true;
                         m_pImpl->finishParagraph(m_pImpl->GetTopContextOfType(CONTEXT_PARAGRAPH));
